err/stringtemplate3.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/stringtemplate3'...
Compiling './lib/python3.5/site-packages/stringtemplate3/grouploaders.py'...
***   File "./lib/python3.5/site-packages/stringtemplate3/grouploaders.py", line 112
    except IOError, ioe:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stringtemplate3/groups.py'...
***   File "./lib/python3.5/site-packages/stringtemplate3/groups.py", line 177
    self.lastCheckedDisk = 0L
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stringtemplate3/interfaces.py'...
***   File "./lib/python3.5/site-packages/stringtemplate3/interfaces.py", line 96
    except RuntimeError, exc: #FIXME:  Exception
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/stringtemplate3/language'...
Compiling './lib/python3.5/site-packages/stringtemplate3/language/ASTExpr.py'...
***   File "./lib/python3.5/site-packages/stringtemplate3/language/ASTExpr.py", line 164
    except antlr.RecognitionException, re:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stringtemplate3/language/ActionEvaluator.py'...
***   File "./lib/python3.5/site-packages/stringtemplate3/language/ActionEvaluator.py", line 112
    except antlr.RecognitionException, ex:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stringtemplate3/language/ActionLexer.py'...
***   File "./lib/python3.5/site-packages/stringtemplate3/language/ActionLexer.py", line 179
    except antlr.RecognitionException, e:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stringtemplate3/language/ActionParser.py'...
***   File "./lib/python3.5/site-packages/stringtemplate3/language/ActionParser.py", line 146
    except antlr.RecognitionException, ex:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stringtemplate3/language/AngleBracketTemplateLexer.py'...
***   File "./lib/python3.5/site-packages/stringtemplate3/language/AngleBracketTemplateLexer.py", line 138
    except antlr.RecognitionException, e:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stringtemplate3/language/ConditionalExpr.py'...
***   File "./lib/python3.5/site-packages/stringtemplate3/language/ConditionalExpr.py", line 74
    except KeyError, ke:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stringtemplate3/language/DefaultTemplateLexer.py'...
***   File "./lib/python3.5/site-packages/stringtemplate3/language/DefaultTemplateLexer.py", line 139
    except antlr.RecognitionException, e:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stringtemplate3/language/GroupLexer.py'...
***   File "./lib/python3.5/site-packages/stringtemplate3/language/GroupLexer.py", line 175
    except antlr.RecognitionException, e:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stringtemplate3/language/GroupParser.py'...
***   File "./lib/python3.5/site-packages/stringtemplate3/language/GroupParser.py", line 160
    except antlr.RecognitionException, ex:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stringtemplate3/language/InterfaceLexer.py'...
***   File "./lib/python3.5/site-packages/stringtemplate3/language/InterfaceLexer.py", line 144
    except antlr.RecognitionException, e:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stringtemplate3/language/InterfaceParser.py'...
***   File "./lib/python3.5/site-packages/stringtemplate3/language/InterfaceParser.py", line 121
    except antlr.RecognitionException, ex:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stringtemplate3/language/TemplateParser.py'...
***   File "./lib/python3.5/site-packages/stringtemplate3/language/TemplateParser.py", line 103
    except antlr.RecognitionException, ex:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stringtemplate3/templates.py'...
***   File "./lib/python3.5/site-packages/stringtemplate3/templates.py", line 833
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/stringtemplate3-3.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
